test/samples/invalid/resolving/non_primitive_local.maruir
fun foo()
locals t: u8[];
{ }
